--- a/Libreria/src/libreria/Consultar.form
+++ b/Libreria/src/libreria/Consultar.form
@@ -74,6 +74,9 @@
           <SubComponents>
             <Component class="javax.swing.JTable" name="tbl_consulta">
               <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Helvetica Neue" size="18" style="0"/>
+                </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="6" rowCount="4">
                     <Column editable="true" title="ID" type="java.lang.Object"/>
